--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/blueimp-gallery.min.css">
     <link rel="stylesheet" href="css/bootstrap-image-gallery.min.css">
-    
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -77,7 +77,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <br>
-            <a href="#gallery" class="btn btn-light btn-lg tagline center btn-responsive" style="margin-bottom:10%;">Explore This Home</a>
+            <a href="#gallery" class="btn btn-light btn-lg tagline center btn-responsive" style="margin-bottom:10%;">CLICK FOR MORE DETAILS</a>
         </div>
     </header>
     <!-- Gallery Script -->
