--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <br /><br /><br />
         <div class="row">
                 <div class="col-xs-12 galleryintro">
-                    <h2>123 Main St.</h2><br />
+                    <h2>123 Main St. Boulder, CO</h2><br />
                     <h5>Tour This Home</h5>
                 </div>
         </div>
