More Text/Button

--- a/index.html
+++ b/index.html
@@ -127,37 +127,37 @@
         <div id="links">
                 <a href="images/1.png" title="" data-gallery>
                     <img src="images/thumbnails/1_tn.jpg" alt="">
-                </a>
+                </a>  
                  <a href="images/2.png" title="" data-gallery>
                     <img src="images/thumbnails/2_tn.jpg" alt="">
-                </a>
+                </a>  
                  <a href="images/3.png" title="" data-gallery>
                     <img src="images/thumbnails/3_tn.jpg" alt="">
-                </a>
+                </a>  
                  <a href="images/4.png" title="" data-gallery>
                     <img src="images/thumbnails/4_tn.jpg" alt="">
-                </a>
+                </a>  
                  <a href="images/5.png" title="" data-gallery>
                     <img src="images/thumbnails/5_tn.jpg" alt="">
-                </a>
+                </a>  
                  <a href="images/6.png" title="" data-gallery>
                     <img src="images/thumbnails/6_tn.jpg" alt="">
-                </a>
+                </a>  
                  <a href="images/7.png" title="" data-gallery>
                     <img src="images/thumbnails/7_tn.jpg" alt="">
-                </a>
+                </a>  
                  <a href="images/8.png" title="" data-gallery>
                     <img src="images/thumbnails/8_tn.jpg" alt="">
-                </a>
+                </a>  
                  <a href="images/9.png" title="" data-gallery>
                     <img src="images/thumbnails/9_tn.jpg" alt="">
-                </a>
+                </a>  
                  <a href="images/10.png" title="" data-gallery>
                     <img src="images/thumbnails/10_tn.jpg" alt="">
-                </a>
+                </a>  
                  <a href="images/11.png" title="" data-gallery>
                     <img src="images/thumbnails/11_tn.jpg" alt="">
-                </a>
+                </a>  
                  <a href="images/12.png" title="" data-gallery>
                     <img src="images/thumbnails/12_tn.jpg" alt="">
                 </a>
@@ -212,7 +212,6 @@
         <div class="text-vertical-center">
               <div class="col-lg-12 text-center">
                     <h2></h2><br/><br/>
-                    <a href="https://goo.gl/maps/esjXkEMtykF2" target="_blank" class="btn btn-lg btn-dark">Property Location</a>
                 </div>
         </div>
     </aside>
@@ -223,19 +222,21 @@
 
     
 
-<!-- Footer -->
+ <!-- Footer -->
     <footer id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>John the Broker</strong><br>
+                    <h4><strong>Benjamin Eves</strong><br>Colliers International
                     </h4>
-                    <p>Located in Boulder, CO</p>
+                    <p>1999 Harrison St #1750<br>Oakland, CA 94612</p>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:matteves@me.com">info@brokeremail.com</a>
+                        <li><i class="fa fa-phone fa-fw"></i>(312)465-0672</li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:ben.eves@colliers.com">ben.eves@colliers.com</a>
                         </li>
                     </ul>
                     <br>
+                    <img src="img/colliers.png">
                     <hr class="small">
                 </div>
             </div>
