More Text/Button

--- a/index.html
+++ b/index.html
@@ -227,15 +227,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Benjamin Eves</strong><br>Colliers International
-                    </h4>
-                    <p>1999 Harrison St #1750<br>Oakland, CA 94612</p>
+                    <h3>Benjamin Eves</h3>
+                    1999 Harrison St #1750<br>Oakland, CA 94612</p>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i>(312)465-0672</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:ben.eves@colliers.com">ben.eves@colliers.com</a>
                         </li>
                     </ul>
-                    <br>
+                    <br></h4>
                     <img src="img/colliers.png">
                     <hr class="small">
                 </div>
